# getip

./: .gitignore  .travis.yml  ChangeLog  DESCRIPTION  LICENSE  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: getip-package.r  getip.r  hostname2ip.r  ip_external.r  ip_internal.r  validate.r  validip.r  zzz.r
man/: getip-package.Rd  getip.Rd  hostname2ip.Rd  ip_external.Rd  ip_internal.Rd  validip.Rd
src/: Makevars.in  Makevars.win  getip_native.c  hostname2ip.c  ip_internal.c  validate.c
src/include/: reactor.h
tests/: getip.r  hostname2ip.r  validate.R  validate.r  validip.r
